# TuneTrend

./: .gitignore  README.md  pyproject.toml  setup.py  template.py
conf/: configs.yaml
src/: constants.py
src/utils/: basic_utils.py  spotify_utils.py
